--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
             <div class="inner-wrap">
                 <section class="heading">
                     <p class="title">Budget-Tracker</p>
-                    <p class="sub-title">Track Your Transaction</p>
+                    <p class="sub-title" >Track Your Transaction</p>
                 </section>
 
                 <section class="trans-control">
                     <div class="action">
                         <h3>Add Transaction</h3>
 
-                        <form class="add">
+                        <form class="add" >
                             <input type="text" name="source" placeholder="Source" autocomplete="off" required>
                             <input type="number" name="amount" placeholder="Amount" autocomplete="off" required>
                             <input type="submit" value="Add Transaction">
@@ -45,7 +45,8 @@
                 </section>
 
                 <section class="trans-history">
-                    <h3>Transaction History</h3>
+                    <h3>Transaction History <button type="button" onclick="window.print()">Print</button></h3>
+                
                     <div class="records">
                         
                         <div class="income">
@@ -64,7 +65,7 @@
 
                         <div class="expense">
                             <h3>Expense</h3>
-                            <ul class="expense-list">
+                            <ul class="expense-list" >
                                 <!-- <li data-id="">
                                     <p>
                                         <span>Streaming Room</span>
